--- a/theme/templates/website/includes/header.html
+++ b/theme/templates/website/includes/header.html
@@ -1,6 +1,8 @@
 <div class="book-header" role="navigation">
     <!-- Actions Left -->
     <a href="#" class="btn pull-left toggle-summary" aria-label="{{ __("SUMMARY_TOGGLE") }}"><i class="fa fa-align-justify"></i></a>
+
+<!-- Commenting out Search and FontSettings buttons that don't seem to work
     <a href="#" class="btn pull-left toggle-search" aria-label="{{ __("SEARCH_TOGGLE") }}"><i class="fa fa-search"></i></a>
     {% if glossary.length > 0 %}
     <a href="{{ basePath }}/GLOSSARY.html" class="btn pull-left" aria-label="{{ __("GLOSSARY_OPEN") }}"><i class="fa fa-sort-alpha-asc"></i></a>
@@ -9,10 +11,15 @@
         <a href="#" class="btn toggle-dropdown" aria-label="{{ __("FONTSETTINGS_TOGGLE") }}"><i class="fa fa-font"></i>
         </a>
         {% include "./font-settings.html" %}
-    </div>
+    </div> -->
+
 
     <!-- Actions Right -->
-    {% if options.links.sharing.all != false %}
+    <div class="dropdown pull-right">
+        <h3>The Last Mile</h3>
+    </div>
+<!-- Commenting out all Social Media and Sharing links -->
+ <!--    {% if options.links.sharing.all != false %}
     <div class="dropdown pull-right">
         <a href="#" class="btn toggle-dropdown" aria-label="{{ __("SHARE_TOGGLE") }}"><i class="fa fa-share-alt"></i>
         </a>
@@ -40,6 +47,7 @@
             </div>
         </div>
     </div>
+
     {% endif %}
 
     {% if options.links.sharing.google != false %}
@@ -57,7 +65,7 @@
     {% if options.links.sharing.vk == true %}
     <a href="#" target="_blank" class="btn pull-right vk-sharing-link sharing-link" data-sharing="vk" aria-label="VK"><i class="fa fa-vk"></i></a>
     {% endif %}
-
+ -->
 
     <!-- Title -->
     <h1>
